--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,156 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background-color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.mainContainer {
+  display: flex;
+  border: solid 1px #FFFFFF;
+  border-radius: 1rem;
+  background-color: #F6FCFF;
+  margin: 2rem;
+
+  height: 90vh;
+
+  min-height: 53rem;
+  min-width: 1250px;
+
+  max-width: 1440px;
+  max-height: 940px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.leftContainer {
+  width: 20%;
+  padding: 2rem 0;
+  background-color: #F6FCFF;
+  border-radius: 1rem;
+}
+
+.left {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  height: 100%;
+  gap: 3em;
+  padding: 25px;
+  border-right: solid 1px #000000;
+}
+
+.photo {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 25%;
+}
+
+.photo img {
+  width: 10rem;
+  height: 10rem;
+  border-radius: 50%;
+}
+
+.bio {
+  height: 50%;
+  border-radius: 0.6rem;
+}
+
+.texts {
+  padding: 1rem;
+  color: #000000;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  border-top: solid 1px #000000;
+  padding-top: 2rem;
+}
+
+.texts p {
+  font-size: 1rem;
+}
+
+.languageContainer {
+  height: 25%;
+  border-top: solid 1px #000000;
+}
+
+
+.rightContainer {
+  width: 80%;
+  padding: 2rem 0;
+  background-color: #F6FCFF;
+  border-radius: 1rem;
+}
+
+.right {
+  width: 100%;
+  height: 100%;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  background-color: #F6FCFF;
+  color: black;
+}
+
+.top {
+  height: 18rem;
+  border-bottom: solid 1px #000000;
+}
+
+.top nav {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav-item {
+  background-color: black;
   color: white;
+  height: 3rem;
+  width: 33.5%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: .3s;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-item:hover,
+.nav-item:focus {
+  background-color: #F6FCFF;
+  border: solid 1px #000000;
+  border-bottom: none;
+  color: black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.experiences {
+  border-left: solid 1px #000000;
+  border-right: solid 1px #000000;
+}
+
+
+.content {
+  border: solid 1px #000000;
+  border-top: none;
+  height: 12rem;
+}
+
+.active {
+  background-color: #F6FCFF;
+  border: solid 1px #000000;
+  border-bottom: none;
+  color: black;
+}
+
+.bottom {
+  margin-top: 2.5rem;
+  height: 58%;
+
+  padding-top: 0;
+  padding-left: 0;
 }
